definitivo ahora si

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     type="text"
                     class="form-control"
                     aria-describedby="nameHelp"
-                    placeholder=" Nombre"
+                    placeholder=""
                     required
                   />
                 </div>
@@ -380,7 +380,7 @@
                     type="email"
                     class="form-control"
                     aria-describedby="nameHelp"
-                    placeholder="Email"
+                    placeholder=""
                     required
                   />
                 </div>
@@ -397,12 +397,12 @@
                   class="fa-solid fa-circle-info text-info"
                   data-bs-toggle="tooltip"
                   data-bs-placement="top"
-                  data-bs-title="Escribe tu mensaje"
+                  data-bs-title="Escribe tu mensaje abajo"
                 ></i>
                 <textarea
                   class="form-control"
                   rows="5"
-                  placeholder="Escribe aquí el mensaje"
+                  placeholder=""
                   required
                 ></textarea>
               </div>
